--- a/style/style.css
+++ b/style/style.css
@@ -16,7 +16,7 @@ body {
   font-family: 'Poppins', sans-serif;
   background-color: var(--bg);
   color: white;
-  /* min-height: 2000px; */
+  min-height: 2000px;
 }
 
 /* Navbar */
@@ -89,9 +89,11 @@ body {
     content: '';
     display: block;
     position: absolute;
-    height: 100%;
     width: 100%;
-    background: linear-gradient(0deg, rgba(1, 1, 3, 1) 3%, rgba(255, 255, 255, 0) 25%);
+    height: 23%;
+    bottom: 0;
+    width: 100%;
+    background: linear-gradient(0deg, rgba(1, 1, 3, 1) 8%, rgba(255, 255, 255, 0) 50%);
 }
 
 .hero .content {
@@ -113,6 +115,7 @@ body {
     line-height: 1.4;
     font-weight: 100;
     text-shadow: 1px 1px 3px rgba(1,1,3,0.5);
+    mix-blend-mode: difference;
 }
 .hero .content .cta {
     margin-top: 1rem;
@@ -123,6 +126,45 @@ body {
     background-color: var(--primary);
     border-radius: 0.5rem;
     box-shadow: 1px 1px 3px rgba(1,1,3,0.5);
+}
+
+/* About Section */
+.about {
+    padding: 8rem 7% 1.4rem;
+}
+.about h2 {
+    text-align: center;
+    font-size: 2.6rem;
+    margin-bottom: 3rem;
+}
+.about h2 span{
+    color: var(--primary);
+}
+
+.about .row {
+    display: flex;
+}
+
+.about .row .about-img {
+    flex: 1 1 45rem;
+}
+.about .row .about-img img {
+    width: 100%;
+}
+.about .row .content {
+    flex: 1 1 35rem;
+    padding: 0 1rem;
+} 
+
+.about .row .content h3 {
+    font-size: 1.8rem;
+    margin-bottom: 1rem;
+}
+.about .row .content p {
+    margin-bottom: 0.8rem;
+    font-size: 1.4rem;
+    font-weight: 100;
+    line-height: 1.6;
 }
 
 
@@ -172,6 +214,29 @@ body {
 
     .navbar .navbar-nav a::hover {
         transform: scaleX(0.2 );
+    }
+
+    .about .row {
+        flex-wrap: wrap;
+    }
+
+    .about .row.about-img img {
+        height: 24rem;
+        object-fit: cover;
+        object-position: center
+    }
+
+    .about .row .content {
+        padding: 0;
+    }
+
+    .about .row .content h3 {
+        margin-top: 1rem;
+        font-size: 2rem;
+    }
+
+    .about .row .content p {
+        font-size: 1.6rem;
     }
 }
 
