--- a/style/style.css
+++ b/style/style.css
@@ -16,7 +16,7 @@ body {
   font-family: 'Poppins', sans-serif;
   background-color: var(--bg);
   color: white;
-  min-height: 2000px;
+  min-height: 9000px;
 }
 
 /* Navbar */
@@ -129,15 +129,21 @@ body {
 }
 
 /* About Section */
-.about {
+.about,
+.menu,
+.contact{
     padding: 8rem 7% 1.4rem;
 }
-.about h2 {
+.about h2, 
+.menu h2,
+.contact h2{
     text-align: center;
     font-size: 2.6rem;
     margin-bottom: 3rem;
 }
-.about h2 span{
+.about h2 span,
+.menu h2 span,
+.contact h2 span{
     color: var(--primary);
 }
 
@@ -168,8 +174,46 @@ body {
 }
 
 
-/* Media Queries */
 
+
+
+/* Menu Section */
+.menu h2,
+.contact h2{
+    margin-bottom: 1rem;
+}
+.menu p,
+.contact p{
+    text-align: center;
+    max-width: 30rem;
+    margin: auto;
+    font-weight: 100;
+    line-height: 1.6;
+}
+.menu .row {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 5rem;
+    justify-content: center;
+}
+.menu .row .menu-card {
+    text-align: center;
+    padding-bottom: 4rem;
+}
+.menu .row .menu-card img {
+    border-radius: 50%;
+    width: 80%;
+}
+.menu .row .menu-card .menu-card-title {
+    margin: 1rem auto 0.5rem;
+}
+
+/* Contact Section */
+.row
+
+
+
+/* Media Queries */
 /* Laptop */
 @media (max-width: 1366px) {
     html {
@@ -237,6 +281,9 @@ body {
 
     .about .row .content p {
         font-size: 1.6rem;
+    }
+    .menu p{
+        font-size: 1.2rem;
     }
 }
 
