--- a/style/style.css
+++ b/style/style.css
@@ -16,7 +16,6 @@ body {
   font-family: 'Poppins', sans-serif;
   background-color: var(--bg);
   color: white;
-  min-height: 9000px;
 }
 
 /* Navbar */
@@ -209,8 +208,73 @@ body {
 }
 
 /* Contact Section */
-.row
+.contact .row {
+    display: flex;
+    margin-top: 2rem;
+    background-color: #222;
+}
+.contact .row .map{
+    flex: 1 1 45rem;
+    width: 100%;
+    object-fit: contain;
+}
 
+.contact .row form {
+    flex: 1 1 45rem;
+    padding: 5rem 2rem;
+    text-align: center;
+}
+.contact .row form .input-group {
+    display: flex;
+    align-items: center;
+    margin-top: 2rem;
+    background-color: var(--bg);
+    border: 1px solid #eee;
+    padding-left: 2rem;
+}
+.contact .row form .input-group input {
+    width: 100%;
+    padding: 2rem;
+    font-size: 1.7rem;
+    background:none;
+    color: #fff;
+}
+.contact .row form .btn{
+    margin-top: 3rem;
+    display: inline-block;
+    padding: 1rem 3rem;
+    font-size: 1.7rem;
+    color: #fff;
+    background-color: var(--primary);
+    cursor: pointer;
+}
+
+/* Footer */
+footer {
+    background-color: var(--primary);
+    text-align: center;
+    padding: 1rem 0;
+    margin-top: 3rem;
+}
+
+footer .socials {
+    padding: 1rem;
+}
+footer .socials a{
+    color: #fff;
+    margin: 1rem;
+}
+footer .socials a:hover,
+footer .socials a:hover{
+    color: var(--bg);
+}
+footer .links {
+    margin-bottom: 1.4rem;
+}
+footer .links a {
+    color: #fff;
+    padding: 0.7rem 1rem;
+}
 
 
 /* Media Queries */
@@ -284,6 +348,15 @@ body {
     }
     .menu p{
         font-size: 1.2rem;
+    }
+    .contact .row {
+        flex-wrap: wrap;
+    }
+    .contact .row .map {
+        height: 30rem;
+    }
+    .contact .row form{
+        padding-top: 0;
     }
 }
 
