--- a/style/style.css
+++ b/style/style.css
@@ -264,6 +264,7 @@ footer .socials a{
     color: #fff;
     margin: 1rem;
 }
+fo
 footer .socials a:hover,
 footer .socials a:hover{
     color: var(--bg);
